@@ -44,25 +44,12 @@ public:
     FrameQtClient();
     virtual ~FrameQtClient();
 
+    //local
+    void openURL(const KURL&);
+    void submitForm(const String& method, const KURL&, PassRefPtr<FormData>);
+
     // FrameQtClient
     virtual void setFrame(const FrameQt*);
-
-    virtual void openURL(const KURL&);
-    virtual void submitForm(const String& method, const KURL&, PassRefPtr<FormData>);
-
-    virtual void checkLoaded();
-
-    virtual void runJavaScriptAlert(String const& message);
-    virtual bool runJavaScriptConfirm(const String& message);
-    virtual bool runJavaScriptPrompt(const String& message, const String& defaultValue, String& result);
-
-    virtual bool menubarVisible() const;
-    virtual bool toolbarVisible() const;
-    virtual bool statusbarVisible() const;
-    virtual bool personalbarVisible() const;
-    virtual bool locationbarVisible() const;
-
-    virtual void loadFinished() const;
 
     // ResourceHandleClient
     virtual void didReceiveResponse(ResourceHandle*, const ResourceResponse&);
@@ -70,9 +57,6 @@ public:
     virtual void didFinishLoading(ResourceHandle*);
     virtual void didFail(ResourceHandle*, const ResourceError&);
     virtual void receivedAllData(ResourceHandle*, PlatformData);
-
-    virtual void setTitle(const String &title);
-
 private:
     // Internal helpers
     FrameQt* traverseNextFrameStayWithin(FrameQt*) const;
